--- a/.github/workflows/Release.yaml
+++ b/.github/workflows/Release.yaml
@@ -5,7 +5,7 @@ name: Release
 on:
   push:
     branches: [ master ]
-    paths: .release/*.exe
+    paths: .release/Release.md
 
 # Содержит одно задание build с названием Project release с несколькими шагами
 jobs:
@@ -16,7 +16,7 @@ jobs:
 # Константы, используемые далее по тексту
     env:
       PROJ: BExplorer
-      TAG: 2.17
+      TAG: 2.17.2
 
     steps:
 # Проверка состава репозитория (без анализа, как может показаться)
